Fix if in template. Make wording more consistent

--- a/comp-1510.md
+++ b/comp-1510.md
@@ -2,7 +2,7 @@
 
 **Harding University** — Andrew Pyle
 
-Class Materials for Introductory Programming in C++ at Harding University
+Course Materials for Introductory Programming in C++ at Harding University
 
 ## Notes
 
